fix:  button text wrapping

--- a/blocks/covid-19-accordion/covid-19-accordion.css
+++ b/blocks/covid-19-accordion/covid-19-accordion.css
@@ -9,23 +9,26 @@
     border-radius: 10px;
 }
 
-.covid-19-accordion .container .banner,
-.covid-19-accordion .container .links {
+.covid-19-accordion .container .banner {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
 }
 
 .covid-19-accordion .container .links {
+    display: flex;
     justify-content: space-evenly;
+    align-items: stretch;
 }
 
 .covid-19-accordion .container .links > button {
     background-color: #b57623;
     width: 50%;
-    margin: 0 10px;
+    margin: 0 8px;
     border-radius: 10px;
     padding: 5px;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 .covid-19-accordion .container h1,
